--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepublishOnly": "npm run test && npm run build"
   },
   "files": [
+    "babel-plugin.js",
     "omnilog.js",
     "omnilog.js.map",
     "omnilog.html",
