--- a/package.json
+++ b/package.json
@@ -55,8 +55,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
-    "react-jss": "^10.9.2",
-    "react-toast": "^1.0.3"
+    "react-jss": "^10.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
